Fix: Revert navbar flex-wrap that broke desktop layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,6 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
 }
 
 .nav-logo {
